Css de TODA la pagina, Screen de favoritos y algunos responsive

--- a/src/Components/AllTop/AllTop.css
+++ b/src/Components/AllTop/AllTop.css
@@ -6,3 +6,11 @@
     justify-content: space-around;
     padding: 20px;
 }
+
+.h2-home {
+    margin-top: 2rem;
+    margin-bottom: 1rem; 
+    text-align: center;
+    color: #d4af37;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+}
