--- a/src/Components/AllUpcoming/AllUpcoming.css
+++ b/src/Components/AllUpcoming/AllUpcoming.css
@@ -1,8 +1,24 @@
-.AllUpcoming
-{
+.AllUpcoming {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap: 20px;
     padding: 20px;
+}
+
+button {
+    display: block;
+    margin: 20px auto; 
+    padding: 10px 10px;
+    background-color: white; 
+    color: #1a1a1a; 
+    border: none; 
+    border-radius: 8px; 
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+}
+
+button:hover {
+    background-color: #f0e14a;
 }
