--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,8 +1,87 @@
-.Results
-{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.buscador,
+.search-input,
+.search-button {
+    box-sizing: border-box;
+}
+
+.search-container {
+    background-color: #2c2c2c; 
     padding: 20px;
+    border-radius: 8px;
+    margin: 20px auto; 
+    max-width: 600px; 
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.search-input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 2px solid #d4af37; 
+    border-radius: 8px;
+    background-color: transparent;
+    color: #fff; 
+    font-size: 16px;
+}
+
+.search-input:focus {
+    outline: none;
+    border-color: #f0e14a; 
+    box-shadow: 0 0 8px 0 rgba(242, 202, 25, 0.5); 
+}
+
+.search-button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    background-color: #d4af37; 
+    color: #1a1a1a; 
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.search-button:hover {
+    background-color: #f0e14a; 
+}
+
+.search-results {
+    background-color: #1a1a1a; 
+    color: #fff;
+    border-radius: 8px;
+    margin-top: 10px;
+    padding: 10px;
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-around; 
+}
+
+.result-item {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #333; 
+    border-radius: 8px; 
+    width: calc(50% - 20px); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.result-item:last-child {
+    border-bottom: none;
+}
+
+.result-item:hover {
+    background-color: #333; 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.75); 
+}
+
+/* RESPONSIVE WEB DESIGN */
+@media (max-width: 768px) {
+    .result-item {
+        width: 100%; 
+        margin: 10px 0; 
+    }
 }
