--- a/src/Screens/Home.css
+++ b/src/Screens/Home.css
@@ -26,3 +26,22 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+/* RESPONSIVE WEB DESIGN */
+@media (max-width: 767px) {
+    .h2-home {
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.5em; 
+    }
+
+    .movie-container {
+        display: grid;
+        gap: 10px;
+    }
+
+    section {
+        padding: 10px;
+        margin: 10px;
+    }
+}
