--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -3,6 +3,16 @@
     display: flex;
     flex-direction: row;
 }
+.MovieCard	
+{
+    width: 380px;
+}
+
+.imagen
+{
+    display: flex;
+    justify-content: center;
+}
 
 .BotonesCard
 {
@@ -11,6 +21,14 @@
     justify-content:space-evenly
 }
 
+.titulo {
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+  
 /* RESPONSIVE WEB DESIGN */
 @media (max-width: 767px) {
     .Movies {
